--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: sampling from continuous distributions, given their pdfs
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
