--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
-Package: 4800shilin
+Package: package4800
 Type: Package
 Title: sampling from continuous distributions, given their pdfs
 Version: 0.1.0
 Author: shilin zheng
 Maintainer: shilin zheng <shilinzheng@slu.edu>
-Description: sampling from continuous distributions, given their pdfs
-License: What license is it under?
+Description: Sampling from continuous distributions given their pdfs.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
